--- a/Baha'i/Others/ROB/V1/p045-052Ch04.html
+++ b/Baha'i/Others/ROB/V1/p045-052Ch04.html
@@ -107,8 +107,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p47">47</a></center><p>
 	   <hr>
-	   2. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, sections <a href="../../../Baha/GL/p003-346.html#lxiii">lxiii</a>, <a href="../../../Baha/GL/p003-346.html#lxiv">lxiv</a>, and <a href="../../../Baha/GL/p003-346.html#lvi">lvi</a>, for the words quoted in this sentence.<p>
-	   3. <i>ibid</i>., section <a href="../../../Baha/GL/p003-346.html#lvi">lvi</a>.<p>
+	   2. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, sections <a href="../../../Baha/GL/p003-346.html#LXIII">lxiii</a>, <a href="../../../Baha/GL/p003-346.html#LXIV">lxiv</a>, and <a href="../../../Baha/GL/p003-346.html#LVI">lvi</a>, for the words quoted in this sentence.<p>
+	   3. <i>ibid</i>., section <a href="../../../Baha/GL/p003-346.html#LVI">lvi</a>.<p>
 	   <hr>
 	   <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para91">&para;91</a>-93 
 	   </small></td>
@@ -136,8 +136,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p49">49</a></center><p>
 	   <hr>
-	   4. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#lxiii">lxiii</a>.<p>
-	   5. <i>ibid.</i>, section <a href="../../../Baha/GL/p003-346.html#lv">lv</a>.
+	   4. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#LXIII">lxiii</a>.<p>
+	   5. <i>ibid.</i>, section <a href="../../../Baha/GL/p003-346.html#LV">lv</a>.
 	   </small></td>
 </tr>
 <tr>
