--- a/Baha'i/Others/ROB/V1/p105-152Ch09.html
+++ b/Baha'i/Others/ROB/V1/p105-152Ch09.html
@@ -671,7 +671,7 @@
 	   </small>
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="facingp143"></a></center><p></small></td>
+       <td VALIGN=top><small><center></center><p></small></td>
    </tr>
 </table>
 <p>
