--- a/Baha'i/Others/ROB/V1/p257-282Ch16.html
+++ b/Baha'i/Others/ROB/V1/p257-282Ch16.html
@@ -375,7 +375,7 @@
 	   13. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#CLXVI">clxvi</a>.<p>
 	   <hr>
 	   ["Whoso layeth claim..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para37">&para;37</a><p>
-	   [Next manifestation] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../3/p133-146Ch07.html#p142">p. 142</a><p>
+	   [Next manifestation] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../V3/p133-146Ch07.html#p142">p. 142</a><p>
 	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
 </tr>
