--- a/Baha'i/Others/ROB/V2/p171-193Ch08.html
+++ b/Baha'i/Others/ROB/V2/p171-193Ch08.html
@@ -345,7 +345,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p189">189</a></center><p>
 	   <hr>
-	   16. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#cxlvii">cxlvii</a>.
+	   16. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#CXLVII">cxlvii</a>.
 	   </small></td>
 </tr>
 <tr>
