--- a/Baha'i/Others/ROB/V2/p283-290Ch13.html
+++ b/Baha'i/Others/ROB/V2/p283-290Ch13.html
@@ -127,7 +127,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p290">290</a></center><p>
-	   * For a further discussion of this subject, see vol. 1, pp. <a href="../V1/p105-152Ch09.html#129">129</a>-37, and pp. <a href="../V1/p228-245Ch14.html#p240">240</a>-42.<p>
+	   * For a further discussion of this subject, see vol. 1, pp. <a href="../V1/p105-152Ch09.html#p129">129</a>-37, and pp. <a href="../V1/p228-245Ch14.html#p240">240</a>-42.<p>
 	   <hr>
 	   4. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para21">p. 245</a>.
 	   </small></td>
