--- a/Baha'i/Others/ROB/V2/p388-396Ch18.html
+++ b/Baha'i/Others/ROB/V2/p388-396Ch18.html
@@ -57,7 +57,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p389">389</a></center><p>
-	   * Part of this Tablet is translated into English and cited in <i>The World Order of Bahá'u'lláh</i>, p. 135. See also <i>The Revelation of Bahá'u'lláh</i>, vol. 1, p. <a href="../V1/p105-152Ch09.html#135">135</a><p>
+	   * Part of this Tablet is translated into English and cited in <i>The World Order of Bahá'u'lláh</i>, p. 135. See also <i>The Revelation of Bahá'u'lláh</i>, vol. 1, p. <a href="../V1/p105-152Ch09.html#p135">135</a><p>
 	   † 'Abdu'l-Bahá.<p>
 	   ‡ See p. <a href="p001-028Ch01.html#p14">14</a>.<p>
 	   <hr>
