--- a/Baha'i/Others/ROB/V2/p065-106Ch04.html
+++ b/Baha'i/Others/ROB/V2/p065-106Ch04.html
@@ -150,7 +150,7 @@ P. 97, replaced Gleanings reference from clxiii to CLXIV
 	   <hr>
 	   3. Hájí Mírzá Haydar-'Alí, <i>Bihjatu's-Sudúr</i>, p. 23 ff.
 	   <hr>
-	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../V1/p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
 </tr>
 <tr>
@@ -297,7 +297,7 @@ P. 97, replaced Gleanings reference from clxiii to CLXIV
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p82">82</a></center><p>
-	   * See also vol. 1: <a href="../V1/p351-363Index.html#ManifestationsOfGod">'Manifestations of God'</a>.
+	   * See also vol. 1: <a href="../V1/p351-363Index.html#ManifestationsofGod">'Manifestations of God'</a>.
 	   </small></td>
 </tr>
 <tr>
