--- a/Baha'i/Others/ROB/V2/p222-235Ch10.html
+++ b/Baha'i/Others/ROB/V2/p222-235Ch10.html
@@ -226,7 +226,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p235">235</a></center><p>
 	   <hr>
-	   11. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#i">i</a>.
+	   11. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#I">i</a>.
 	   </small></td>
 </tr>
 </table>
