--- a/Baha'i/Others/ROB/V2/p301-336Ch15.html
+++ b/Baha'i/Others/ROB/V2/p301-336Ch15.html
@@ -459,7 +459,7 @@ p 324 incorrect quote (did not correct it)
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p323">323</a></center><p>
-	   * For more details see vol. 1, pp. <a href="../V1/p105-152Ch09.html#143">143</a>-7, passim.<p>
+	   * For more details see vol. 1, pp. <a href="../V1/p105-152Ch09.html#p143">143</a>-7, passim.<p>
 	   † 'Iráq. (A.T.)<p>
 	   <hr>
 	   26. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#para455">cxiii</a>.
