--- a/Baha'i/Others/ROB/V3/p467-483Index.html
+++ b/Baha'i/Others/ROB/V3/p467-483Index.html
@@ -3,7 +3,7 @@
 
 <!-- ISSUES LOG
 	 Mahmúd Mírzá
-	 Religious leaders.... Religious minorities
+	 Religious leaders - has "see" link to 'Religious minorities' -> not sure where it is supposed to go
 	 Hidden Words - added page 357
 	 Added entry for Naw-Rúz
 	 Mashriqu'l-Adhkár - changed page 342 to 343
@@ -1366,7 +1366,7 @@ Religion,
 Religious leaders, 
 	<blockquote>
 	<a href= "../V3/p001-031Ch01.html#p2">2</a>, <a href= "../V3/p032-051Ch02.html#p38">38</a>, <a href= "../V3/p052-072Ch03.html#p65">65</a>, <a href= "../V3/p087-107Ch05.html#p98">98</a>, <a href= "../V3/p147-173Ch08.html#p156">156</a>, <a href= "../V3/p147-173Ch08.html#p162">162</a>-6, <a href= "../V3/p275-307Ch13.html#p291">291</a>, <a href= "../V3/p343-370Ch16.html#p355">355</a>, <a href= "../V3/p371-399Ch17.html#p395">395</a>;<br> 
-	<i>see also</i> <a href="../V3/p467-483Index.html#Divines">Divines</a>, <a href="../V3/p467-483Index.html#Religiousminorities">Religious minorities</a>, <a href= "../V3/p253-274Ch12.html#p260">260ff.</a><br>
+	<i>see also</i> <a href="../V3/p467-483Index.html#Divines">Divines</a>, Religious minorities, <a href= "../V3/p253-274Ch12.html#p260">260ff.</a><br>
 	</blockquote>
 Religious traditions, <a href= "../V3/p032-051Ch02.html#p49">49</a><p>
 Renan, <a href= "../V3/p147-173Ch08.html#p166">166</a>-7<p>
