--- a/Baha'i/Others/ROB/V4/Contents.html
+++ b/Baha'i/Others/ROB/V4/Contents.html
@@ -169,7 +169,7 @@
 <tr>
        <td><div align="right"></div></td>
        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The dawn of the new age</td>
-       <td><div align="right"><a href="p118-144Ch08.htmlp136">136</a></div></td>
+       <td><div align="right"><a href="p118-144Ch08.html#p136">136</a></div></td>
 </tr>
 <tr>
        <td><div align="right"></div></td>
