--- a/Baha'i/Others/ROB/V4/p463-485Index.html
+++ b/Baha'i/Others/ROB/V4/p463-485Index.html
@@ -594,7 +594,7 @@ Bahá'u'lláh<a name="Bahá'u'lláh"></a><p>
 	Zillu's-Sultán's letter to, <a href= "../V4/p091-102Ch06.html#p101">101</a><br>
 	mentioned, <a href= "../V4/p118-144Ch08.html#p122">122</a>, <a href= "../V4/p177-189Ch12.html#p177">177</a>, <a href= "../V4/p177-189Ch12.html#p178">178</a>, <a href= "../V4/p177-189Ch12.html#p182">182</a>, <a href= "../V4/p351-367Ch23.html#p363">363</a><br>
 	</blockquote>
-Bahjí, Mansion of, <i>illus. <a href= "../V4/p103-117Ch07.html#p109">109</a>, <a href= "../V4/p103-117Ch07.html#p110">110</a>, <a href= "../V4/p103-117Ch07.html#p111">111</a>, <a href= "../V4/p103-117Ch07.html#p112">112</a>, <a href= "../V4/p413-424Ch26.html#p422">422</a></i>; <a href= "../V4/p011-032Ch02.html#p30">30</a>, <a href= "../V4/p103-117Ch07.html#p103">103</a>-17, <a href= "../V4/p391-412Ch25.html#p405">405</a>, <a href= "../V4/p413-424Ch26.html#p416">416</a><p>
+Bahjí, Mansion of, <i>illus. <a href= "../V4/p103-117Ch07.html#p109">109</a>, <a href= "../V4/p103-117Ch07.html#p110">110</a>, <a href= "../V4/p103-117Ch07.html#p111a">111</a>, <a href= "../V4/p103-117Ch07.html#p112">112</a>, <a href= "../V4/p413-424Ch26.html#p422">422</a></i>; <a href= "../V4/p011-032Ch02.html#p30">30</a>, <a href= "../V4/p103-117Ch07.html#p103">103</a>-17, <a href= "../V4/p391-412Ch25.html#p405">405</a>, <a href= "../V4/p413-424Ch26.html#p416">416</a><p>
 <blockquote>
 	and 'Abdu'1-Bahá, <a href= "../V4/p001-010Ch01.html#p1">1</a>, <a href= "../V4/p001-010Ch01.html#p5">5</a>, <a href= "../V4/p103-117Ch07.html#p104">104</a>, <a href= "../V4/p103-117Ch07.html#p106">106</a>, <a href= "../V4/p103-117Ch07.html#p108">108</a><br>
 	Bahá'u'lláh at, <a href= "../V4/p001-010Ch01.html#p9">9n.</a>, <a href= "../V4/p073-090Ch05.html#p85">85</a>, <a href= "../V4/p103-117Ch07.html#p103">103</a>-17, <a href= "../V4/p239-256Ch17.html#p242">242</a>, <a href= "../V4/p239-256Ch17.html#p245">245</a>, <a href= "../V4/p329-350Ch22.html#p333">333</a>, <a href= "../V4/p351-367Ch23.html#p351">351</a>, <a href= "../V4/p413-424Ch26.html#p414">414</a>, <a href= "../V4/p413-424Ch26.html#p418">418</a>, <a href= "../V4/p413-424Ch26.html#p423">423</a><br>
@@ -1124,7 +1124,7 @@ Khurásán<a name="Khurásán"></a>, <a href= "../V4/p091-102Ch06.html#p100">100
 Khuy, <a href= "../V4/p432-440Apndx_III.html#p439">439</a><p>
 King of Martyrs<a name="KingofMartyrs"></a>, (Sultánu'sh-Shuhadá, Mírzá Muhammad-Hasan), <i>illus. <a href= "../V4/p073-090Ch05.html#p77">77</a></i>; <a href= "../V4/p011-032Ch02.html#p16">16</a>, <a href= "../V4/p050-072Ch04.html#p58">58</a>, <a href= "../V4/p073-090Ch05.html#p73">73</a>-90, <a href= "../V4/p091-102Ch06.html#p91">91</a>, <a href= "../V4/p091-102Ch06.html#p99">99</a>-100, <a href= "../V4/p091-102Ch06.html#p101">101</a>, <a href= "../V4/p118-144Ch08.html#p119">119</a>, <a href= "../V4/p239-256Ch17.html#p254">254</a>, <a href= "../V4/p368-390Ch24.html#p368">368</a>, <a href= "../V4/p368-390Ch24.html#p384">384</a>, <a href= "../V4/p432-440Apndx_III.html#p434">434</a><p>
 	<blockquote>
-	'Abdu'l-Bahá's prayer for, {<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p073-090Ch05.html#p82">82</a>}<br>
+	'Abdu'l-Bahá's prayer for, {<tt>ROB4</tt>: <a href= "../V4/p073-090Ch05.html#p82">82</a>}<br>
 	</blockquote>
 Kings, <a href= "../V4/p091-102Ch06.html#p98">98</a>, <a href= "../V4/p177-189Ch12.html#p179">179</a>, <a href= "../V4/p227-238Ch16.html#p235">235</a>, <a href= "../V4/p274-293Ch19.html#p291">291</a>, <a href= "../V4/p368-390Ch24.html#p388">388</a>, <a href= "../V4/p413-424Ch26.html#p421">421</a><p>
 Kirmán, <a href= "../V4/p391-412Ch25.html#p399">399</a>, <a href= "../V4/p391-412Ch25.html#p400">400</a><p>
@@ -1324,7 +1324,7 @@ Mecca, <a href= "../V4/p351-367Ch23.html#p365">365</a><p>
 Men, <a href= "../V4/p214-226Ch15.html#p215">215</a><p>
 	<blockquote>
 	Bahá'í, in great danger, <a href= "../V4/p118-144Ch08.html#p119">119</a><br>
-	equality between men and women, <a href= "../V4/p118-144Ch08.html#p199">199</a>-204
+	equality between men and women, <a href= "../V4/p190-204Ch13.html#p199">199</a>-204
 	</blockquote>
 Mercy, <a href= "../V4/p091-102Ch06.html#p93">93</a>, <a href= "../V4/p091-102Ch06.html#p95">95</a>, <a href= "../V4/p190-204Ch13.html#p196">196</a>, <a href= "../V4/p227-238Ch16.html#p229">229</a><p>
 Messengers, <i>see</i> <a href="../V4/p463-485Index.html#Prophets">Prophets</a><p>
@@ -1791,9 +1791,9 @@ Sámirí, <a href= "../V4/p033-049Ch03.html#p46">46</a>, <a href= "../V4/p205-21
 Saráju'l-Hukamá, <i>illus. <a href= "../V4/p315-328Ch21.html#p327">327</a></i>; <a href= "../V4/p446-462Refs.html#p459">459</a><p>
 Sardár 'Azíz Khán, <a href= "../V4/p432-440Apndx_III.html#p435">435</a><p>
 Schools, <a href= "../V4/p214-226Ch15.html#p215">215</a>, <a href= "../V4/p294-314Ch20.html#p313">313</a>-14<p>
-Sciences, {<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p118-144Ch08.html#p118">118n.</a>, <a href= "../Baha'i/Others/ROB/V4/p118-144Ch08.html#p138">138</a>, <a href= "../Baha'i/Others/ROB/V4/p118-144Ch08.html#p144">144</a>, <a href= "../Baha'i/Others/ROB/V4/p161-167Ch10.html#p162">162</a>, <a href= "../Baha'i/Others/ROB/V4/p168-176Ch11.html#p173">173</a>, <a href= "../Baha'i/Others/ROB/V4/p205-213Ch14.html#p212">212</a>, <a href= "../Baha'i/Others/ROB/V4/p274-293Ch19.html#p278">278</a>, <a href= "../Baha'i/Others/ROB/V4/p351-367Ch23.html#p354">354</a>, <a href= "../Baha'i/Others/ROB/V4/p391-412Ch25.html#p406">406</a>, <a href= "../Baha'i/Others/ROB/V4/p432-440Apndx_III.html#p433">433</a>}<br>
+Sciences, {<tt>ROB4</tt>: <a href= "../V4/p118-144Ch08.html#p118">118n.</a>, <a href= "../V4/p118-144Ch08.html#p138">138</a>, <a href= "../V4/p118-144Ch08.html#p144">144</a>, <a href= "../V4/p161-167Ch10.html#p162">162</a>, <a href= "../V4/p168-176Ch11.html#p173">173</a>, <a href= "../V4/p205-213Ch14.html#p212">212</a>, <a href= "../V4/p274-293Ch19.html#p278">278</a>, <a href= "../V4/p351-367Ch23.html#p354">354</a>, <a href= "../V4/p391-412Ch25.html#p406">406</a>, <a href= "../V4/p432-440Apndx_III.html#p433">433</a>}<br>
 	<blockquote>
-	harmony of religion and, {<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p145-160Ch09.html#p156">156</a>}<p>
+	harmony of religion and, {<tt>ROB4</tt>: <a href= "../V4/p145-160Ch09.html#p156">156</a>}<p>
 	</blockquote>
 Scientists, <a href= "../V4/p351-367Ch23.html#p354">354</a><p>
 Scriptures<a name="Scriptures"></a>, <a href= "../V4/p033-049Ch03.html#p47">47</a>, <a href= "../V4/p033-049Ch03.html#p48">48</a>, <a href= "../V4/p033-049Ch03.html#p49">49</a>, <a href= "../V4/p118-144Ch08.html#p126">126</a>, <a href= "../V4/p118-144Ch08.html#p137">137</a>, <a href= "../V4/p214-226Ch15.html#p218">218</a>, <a href= "../V4/p257-273Ch18.html#p262">262</a>, <a href= "../V4/p368-390Ch24.html#p373">373</a><p>
