--- a/Baha'i/Others/ROB/V4/p011-032Ch02.html
+++ b/Baha'i/Others/ROB/V4/p011-032Ch02.html
@@ -343,7 +343,7 @@
 	   * see vol. 2, pp. <a href="../V2/p065-106Ch04.html#p94">94</a>-6.<p>
 	   † For a brief story of her life see <i>Bahá'í World</i>, vol. VIII, pp. 631-42.<p>
 	   <hr>
-	   15. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para182">p. 63</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../2/p065-106Ch04.html#p95">p. 95</a>
+	   15. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para182">p. 63</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../V2/p065-106Ch04.html#p95">p. 95</a>
 	   <hr>
 	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../V1/p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
